--- a/config/crd/bases/batch.x-k8s.io_jobsets.yaml
+++ b/config/crd/bases/batch.x-k8s.io_jobsets.yaml
@@ -55,6 +55,7 @@ spec:
                           type: boolean
                       type: object
                     replicas:
+                      default: 1
                       description: 'Replicas is the number of jobs that will be created
                         from this ReplicatedJob''s template. Jobs names will be in
                         the format: <jobSet.name>-<spec.replicatedJob.name>-<job-index>'
