--- a/config/crd/bases/batch.x-k8s.io_jobsets.yaml
+++ b/config/crd/bases/batch.x-k8s.io_jobsets.yaml
@@ -48,13 +48,17 @@ spec:
                         job.
                       properties:
                         enableDNSHostnames:
-                          description: EnableDNSHostnames allows pods to be reached
-                            via their hostnames.
+                          description: 'EnableDNSHostnames allows pods to be reached
+                            via their hostnames. Pods will be reachable using the
+                            fully qualified pod hostname, which is in the format:
+                            <jobSet.name>-<spec.replicatedJob.name>-<job-index>-<pod-index>.<jobSet.name>-<spec.replicatedJob.name>-<job-index>'
                           type: boolean
                       type: object
                     replicas:
-                      description: Replicas is the number of jobs that will be created
-                        from this ReplicatedJob's template.
+                      default: 1
+                      description: 'Replicas is the number of jobs that will be created
+                        from this ReplicatedJob''s template. Jobs names will be in
+                        the format: <jobSet.name>-<spec.replicatedJob.name>-<job-index>'
                       type: integer
                     template:
                       description: Template defines the template of the Job that will
@@ -9420,6 +9424,12 @@ spec:
                   - name
                   - network
                   type: object
+                  x-kubernetes-validations:
+                  - message: EnableDNSHostnames requires job to be in indexed completion
+                      mode
+                    rule: '!has(self.network) || !has(self.network.enableDNSHostnames)
+                      || !self.network.enableDNSHostnames || (has(self.template.spec.completionMode)
+                      && self.template.spec.completionMode == "Indexed")'
                 type: array
                 x-kubernetes-list-map-keys:
                 - name
