--- a/config/crd/bases/batch.x-k8s.io_jobsets.yaml
+++ b/config/crd/bases/batch.x-k8s.io_jobsets.yaml
@@ -59,11 +59,62 @@ spec:
                 items:
                   properties:
                     exclusive:
-                      description: Exclusive holds scheduling parameters to make the
-                        job exclusive to the given topology.
+                      description: Exclusive defines that the jobs are 1:1 with the
+                        specified topology. This is enforced against all jobs, whether
+                        or not they are created by JobSet.
                       properties:
+                        namespaceSelector:
+                          description: A label query over the set of namespaces that
+                            exclusiveness applies to. Defaults to the job's namespace.
+                            An empty selector ({}) matches all namespaces.
+                          properties:
+                            matchExpressions:
+                              description: matchExpressions is a list of label selector
+                                requirements. The requirements are ANDed.
+                              items:
+                                description: A label selector requirement is a selector
+                                  that contains values, a key, and an operator that
+                                  relates the key and values.
+                                properties:
+                                  key:
+                                    description: key is the label key that the selector
+                                      applies to.
+                                    type: string
+                                  operator:
+                                    description: operator represents a key's relationship
+                                      to a set of values. Valid operators are In,
+                                      NotIn, Exists and DoesNotExist.
+                                    type: string
+                                  values:
+                                    description: values is an array of string values.
+                                      If the operator is In or NotIn, the values array
+                                      must be non-empty. If the operator is Exists
+                                      or DoesNotExist, the values array must be empty.
+                                      This array is replaced during a strategic merge
+                                      patch.
+                                    items:
+                                      type: string
+                                    type: array
+                                required:
+                                - key
+                                - operator
+                                type: object
+                              type: array
+                            matchLabels:
+                              additionalProperties:
+                                type: string
+                              description: matchLabels is a map of {key,value} pairs.
+                                A single {key,value} in the matchLabels map is equivalent
+                                to an element of matchExpressions, whose key field
+                                is "key", the operator is "In", and the values array
+                                contains only "value". The requirements are ANDed.
+                              type: object
+                          type: object
+                          x-kubernetes-map-type: atomic
                         topologyKey:
-                          description: Topology key for pod affinity/anti-affinity.
+                          description: TopologyKey refers to the topology on which
+                            exclusive placement will be enforced (e.g., node, rack,
+                            zone etc.)
                           type: string
                       type: object
                     name:
