one headless svc per replicatedJob

--- a/config/crd/bases/batch.x-k8s.io_jobsets.yaml
+++ b/config/crd/bases/batch.x-k8s.io_jobsets.yaml
@@ -129,7 +129,7 @@ spec:
                           description: 'EnableDNSHostnames allows pods to be reached
                             via their hostnames. Pods will be reachable using the
                             fully qualified pod hostname, which is in the format:
-                            <jobSet.name>-<spec.replicatedJob.name>-<job-index>-<pod-index>.<jobSet.name>-<spec.replicatedJob.name>-<job-index>'
+                            <jobSet.name>-<spec.replicatedJob.name>-<job-index>-<pod-index>.<jobSet.name>-<spec.replicatedJob.name>'
                           type: boolean
                       type: object
                     replicas:
