--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -57,3 +57,15 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - ""
+  resources:
+  - services
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
