Validate job spec is immutable (#49)
* validate job spec is immutable

* address comments

* flip updateShouldFail to updateShouldSucceed

* remove update prefix

--- a/config/crd/bases/batch.x-k8s.io_jobsets.yaml
+++ b/config/crd/bases/batch.x-k8s.io_jobsets.yaml
@@ -9515,6 +9515,9 @@ spec:
             required:
             - jobs
             type: object
+            x-kubernetes-validations:
+            - message: Value is immutable
+              rule: self == oldSelf
           status:
             description: JobSetStatus defines the observed state of JobSet
             properties:
