--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -26,6 +26,33 @@ rules:
   - update
   - watch
 - apiGroups:
+    - ""
+  resources:
+    - secrets
+  verbs:
+    - get
+    - list
+    - update
+    - watch
+- apiGroups:
+    - admissionregistration.k8s.io
+  resources:
+    - mutatingwebhookconfigurations
+  verbs:
+    - get
+    - list
+    - update
+    - watch
+- apiGroups:
+    - admissionregistration.k8s.io
+  resources:
+    - validatingwebhookconfigurations
+  verbs:
+    - get
+    - list
+    - update
+    - watch
+- apiGroups:
   - batch
   resources:
   - jobs/status
