Renamed api group from batch.x-k8s.io to jobset.x-k8s.io

--- a/config/rbac/jobset_viewer_role.yaml
+++ b/config/rbac/jobset_viewer_role.yaml
@@ -12,7 +12,7 @@ metadata:
   name: jobset-viewer-role
 rules:
 - apiGroups:
-  - batch.x-k8s.io
+  - jobset.x-k8s.io
   resources:
   - jobsets
   verbs:
@@ -20,7 +20,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - batch.x-k8s.io
+  - jobset.x-k8s.io
   resources:
   - jobsets/status
   verbs:
