--- a/config/crd/patches/cainjection_in_jobsets.yaml
+++ b/config/crd/patches/cainjection_in_jobsets.yaml
@@ -4,4 +4,4 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: $(CERTIFICATE_NAMESPACE)/$(CERTIFICATE_NAME)
-  name: jobsets.batch.x-k8s.io
+  name: jobsets.jobset.x-k8s.io
