--- a/config/rbac/jobset_editor_role.yaml
+++ b/config/rbac/jobset_editor_role.yaml
@@ -12,7 +12,7 @@ metadata:
   name: jobset-editor-role
 rules:
 - apiGroups:
-  - batch.x-k8s.io
+  - jobset.x-k8s.io
   resources:
   - jobsets
   verbs:
@@ -24,7 +24,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - batch.x-k8s.io
+  - jobset.x-k8s.io
   resources:
   - jobsets/status
   verbs:
