--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -11,12 +11,12 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
-      path: /mutate-batch-x-k8s-io-v1alpha1-jobset
+      path: /mutate-jobset-x-k8s-io-v1alpha1-jobset
   failurePolicy: Fail
   name: mjobset.kb.io
   rules:
   - apiGroups:
-    - batch.x-k8s.io
+    - jobset.x-k8s.io
     apiVersions:
     - v1alpha1
     operations:
@@ -38,12 +38,12 @@ webhooks:
     service:
       name: webhook-service
       namespace: system
-      path: /validate-batch-x-k8s-io-v1alpha1-jobset
+      path: /validate-jobset-x-k8s-io-v1alpha1-jobset
   failurePolicy: Fail
   name: vjobset.kb.io
   rules:
   - apiGroups:
-    - batch.x-k8s.io
+    - jobset.x-k8s.io
     apiVersions:
     - v1alpha1
     operations:
