--- a/config/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -46,7 +46,7 @@ spec:
                       jobs.
                     type: integer
                 type: object
-              replicatedJob:
+              replicatedJobs:
                 description: ReplicatedJobs is the group of jobs that will form the
                   set.
                 items:
