Increase log level to 2 by default

--- a/config/default/manager_config_patch.yaml
+++ b/config/default/manager_config_patch.yaml
@@ -8,3 +8,8 @@ spec:
     spec:
       containers:
       - name: manager
+        args:
+        - "--zap-log-level=2"
+        - "--health-probe-bind-address=:8081"
+        - "--metrics-bind-address=127.0.0.1:8080"
+        - "--leader-elect"
