--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -36,6 +36,9 @@ patchesStrategicMerge:
 # crd/kustomization.yaml
 - manager_webhook_patch.yaml
 
+# Other configurations
+- manager_config_patch.yaml
+
 # [CERTMANAGER] To enable cert-manager, uncomment all sections with 'CERTMANAGER'.
 # Uncomment 'CERTMANAGER' sections in crd/kustomization.yaml to enable the CA injection in the admission webhooks.
 # 'CERTMANAGER' needs to be enabled to use ca injection
