adding a simple parallel sleep and fix validation with pytorch

--- a/examples/pytorch/resnet.yaml
+++ b/examples/pytorch/resnet.yaml
@@ -5,6 +5,8 @@ metadata:
 spec:
   replicatedJobs:
   - name: workers
+    network:
+      enableDNSHostnames: true
     template:
       spec:
         parallelism: 4
