require templates in replicatejobs

--- a/config/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -9492,13 +9492,8 @@ spec:
                       type: object
                   required:
                   - name
+                  - template
                   type: object
-                  x-kubernetes-validations:
-                  - message: EnableDNSHostnames requires job to be in indexed completion
-                      mode
-                    rule: '!has(self.network) || !has(self.network.enableDNSHostnames)
-                      || !self.network.enableDNSHostnames || (has(self.template.spec.completionMode)
-                      && self.template.spec.completionMode == "Indexed")'
                 type: array
                 x-kubernetes-list-map-keys:
                 - name
