--- a/config/components/prometheus/monitor.yaml
+++ b/config/components/prometheus/monitor.yaml
@@ -12,7 +12,7 @@ metadata:
     app.kubernetes.io/part-of: jobset
     app.kubernetes.io/managed-by: kustomize
   name: controller-manager-metrics-monitor
-  namespace: jobset-system
+  namespace: system
 spec:
   endpoints:
     - path: /metrics
