Allow prometheus to gather metrics published by controller-runtime (#99)
* prometheus integration

* prometheus can be deployed individually

* reorganize config folder so prometheus can be indvidually applied

* update crd path in tests

* update docs

* update docs for dev version

--- a/config/prometheus/kustomization.yaml
+++ b/config/prometheus/kustomization.yaml
@@ -1,2 +1,7 @@
+
+# This overlay builds the prometheus component to be used in combination
+# with other overlays.
+
+namespace: jobset-system
 resources:
-- monitor.yaml
+- ../components/prometheus
