--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -9501,6 +9501,8 @@ spec:
                     description: Operator determines either All or Any of the selected
                       jobs should succeed to consider the JobSet successful
                     type: string
+                required:
+                - operator
                 type: object
                 x-kubernetes-validations:
                 - message: Value is immutable
