redesign success policy api

--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -9450,53 +9450,6 @@ spec:
                   JobSet as succeeded. The JobSet is always declared succeeded if
                   all jobs in the set finished with status complete.
                 properties:
-                  job_selector:
-                    description: JobSelector selects the jobs that the policy will
-                      apply to. The selector only applies to the jobs created by the
-                      JobSet. An empty selector will match all jobs.
-                    properties:
-                      matchExpressions:
-                        description: matchExpressions is a list of label selector
-                          requirements. The requirements are ANDed.
-                        items:
-                          description: A label selector requirement is a selector
-                            that contains values, a key, and an operator that relates
-                            the key and values.
-                          properties:
-                            key:
-                              description: key is the label key that the selector
-                                applies to.
-                              type: string
-                            operator:
-                              description: operator represents a key's relationship
-                                to a set of values. Valid operators are In, NotIn,
-                                Exists and DoesNotExist.
-                              type: string
-                            values:
-                              description: values is an array of string values. If
-                                the operator is In or NotIn, the values array must
-                                be non-empty. If the operator is Exists or DoesNotExist,
-                                the values array must be empty. This array is replaced
-                                during a strategic merge patch.
-                              items:
-                                type: string
-                              type: array
-                          required:
-                          - key
-                          - operator
-                          type: object
-                        type: array
-                      matchLabels:
-                        additionalProperties:
-                          type: string
-                        description: matchLabels is a map of {key,value} pairs. A
-                          single {key,value} in the matchLabels map is equivalent
-                          to an element of matchExpressions, whose key field is "key",
-                          the operator is "In", and the values array contains only
-                          "value". The requirements are ANDed.
-                        type: object
-                    type: object
-                    x-kubernetes-map-type: atomic
                   operator:
                     description: Operator determines either All or Any of the selected
                       jobs should succeed to consider the JobSet successful
@@ -9504,6 +9457,13 @@ spec:
                     - All
                     - Any
                     type: string
+                  replicatedJobNames:
+                    description: ReplicatedJobNames are the names of the replicated
+                      jobs the operator will apply to. An empty list will apply to
+                      all replicatedJobs.
+                    items:
+                      type: string
+                    type: array
                 required:
                 - operator
                 type: object
