--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -9458,9 +9458,9 @@ spec:
                     - Any
                     type: string
                   replicatedJobNames:
-                    description: ReplicatedJobNames are the names of the replicated
-                      jobs the operator will apply to. An empty list will apply to
-                      all replicatedJobs.
+                    description: TargetReplicatedJobs are the names of the replicated
+                      jobs the operator will apply to. A null or empty list will apply
+                      to all replicatedJobs.
                     items:
                       type: string
                     type: array
