Add Success Policy to JobSet API (#124)
* resolve merge conflict

* address comment

* address comments

* calculate expected completions from spec

* redesign success policy api

* new success policy design

* clean up

* add validation that replicatedJob names in successPolicy are part of the jobset spec

* address 2nd comments

* continue after executing success policy if jobset is not completed

--- a/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
+++ b/config/components/crd/bases/jobset.x-k8s.io_jobsets.yaml
@@ -9445,6 +9445,31 @@ spec:
                 x-kubernetes-validations:
                 - message: Value is immutable
                   rule: self == oldSelf
+              successPolicy:
+                description: SuccessPolicy configures when to declare the JobSet as
+                  succeeded. The JobSet is always declared succeeded if all jobs in
+                  the set finished with status complete.
+                properties:
+                  operator:
+                    description: Operator determines either All or Any of the selected
+                      jobs should succeed to consider the JobSet successful
+                    enum:
+                    - All
+                    - Any
+                    type: string
+                  replicatedJobNames:
+                    description: TargetReplicatedJobs are the names of the replicated
+                      jobs the operator will apply to. A null or empty list will apply
+                      to all replicatedJobs.
+                    items:
+                      type: string
+                    type: array
+                required:
+                - operator
+                type: object
+                x-kubernetes-validations:
+                - message: Value is immutable
+                  rule: self == oldSelf
               suspend:
                 description: Suspend suspends all running child Jobs when set to true.
                 type: boolean
